support besu dns config
moved permissions config to template
added dns question
added ip and dns mappings to the default answers file and using that to build the permissions and static nodes files

--- a/templates/besu/config/besu/config.toml
+++ b/templates/besu/config/besu/config.toml
@@ -49,3 +49,10 @@ discovery-enabled=true
 {% else %}
 discovery-enabled=false
 {% endif %}
+
+
+{% if enable_dns %}
+# dns
+Xdns-enabled=true
+Xdns-update-enabled=true
+{% endif %}
