--- a/templates/besu/docker-compose.yml
+++ b/templates/besu/docker-compose.yml
@@ -168,7 +168,9 @@ services:
 {% endif %}
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.11
+{% endif %}
 
   validator2:
     << : *besu-def
@@ -185,7 +187,9 @@ services:
       - validator1
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.12
+{% endif %}
 
   validator3:
     << : *besu-def
@@ -202,7 +206,9 @@ services:
       - validator1
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.13
+{% endif %}
 
   validator4:
     << : *besu-def
@@ -219,7 +225,9 @@ services:
       - validator1
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.14
+{% endif %}
 
   rpcnode:
     << : *besu-def
@@ -239,7 +247,9 @@ services:
       - 8546:8546/tcp
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.15
+{% endif %}
 
   ethsignerProxy:
     << : *ethsignerProxy-def
@@ -253,7 +263,9 @@ services:
       - 18545:8545/tcp
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.40
+{% endif %}
 
 
 {% if privacy %}
@@ -271,7 +283,9 @@ services:
       - ./config/orion/log-config.xml:/config/log-config.xml
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.26
+{% endif %}
 
   member1besu:
     << : *besu-def
@@ -310,7 +324,9 @@ services:
       - 20001:8546/tcp
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.16
+{% endif %}
 
   member2orion:
     << : *orion-def
@@ -326,7 +342,9 @@ services:
       - ./config/orion/log-config.xml:/config/log-config.xml
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.27
+{% endif %}
 
   member2besu:
     << : *besu-def
@@ -365,7 +383,9 @@ services:
       - 20003:8546/tcp
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.17
+{% endif %}
 
   member3orion:
     << : *orion-def
@@ -381,7 +401,9 @@ services:
       - ./config/orion/log-config.xml:/config/log-config.xml
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.28
+{% endif %}
 
   member3besu:
     << : *besu-def
@@ -420,7 +442,9 @@ services:
       - 20005:8546/tcp
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.18
+{% endif %}
 {% endif %}
 
 {% if not orchestrate %}
@@ -433,7 +457,9 @@ services:
       - 25000:80/tcp
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.31
+{% endif %}
 
   prometheus:
     image: "prom/prometheus"
@@ -446,7 +472,9 @@ services:
       - 9090:9090/tcp
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.32
+{% endif %}
 
   grafana:
     image: "grafana/grafana"
@@ -459,7 +487,9 @@ services:
       - 3000:3000/tcp
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.33
+{% endif %}
 {% endif %}
 
 {% if elk %}
@@ -467,37 +497,49 @@ services:
     << : *redis-def
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.34
+{% endif %}
 
   elasticsearch:
     << : *elasticsearch-def
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.35
+{% endif %}
 
   kibana:
     << : *kibana-def
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.36
+{% endif %}
 
   logstash:
     << : *logstash-def
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.37
+{% endif %}
 
   filebeat:
     << : *filebeat-def
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.38      
+{% endif %}
 
   metricbeat:
     << : *metricbeat-def
     networks:
       quorum-dev-quickstart:
+{% if not enable_dns %}
         ipv4_address: 172.16.239.39 
+{% endif %}
 
 {% endif %}
 
