--- a/templates/besu/config/besu/config.toml
+++ b/templates/besu/config/besu/config.toml
@@ -26,7 +26,7 @@ metrics-host="0.0.0.0"
 metrics-port=9545
 
 # permissions
-{% if enable_p2p_discovery %}
+{% if enable_node_permissions %}
 permissions-nodes-config-file-enabled=true
 permissions-nodes-config-file="/config/permissions_config.toml"
 {% else %}
