--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "got": "^11.5.1",
+    "isbinaryfile": "^4.0.6",
     "keycloak-connect": "^11.0.0",
     "log-update": "^4.0.0",
     "nunjucks": "^3.2.2",
     "open": "^7.1.0",
-    "tmp": "^0.2.1",
-    "isbinaryfile": "^4.0.6"
+    "tmp": "^0.2.1"
   }
 }
