option to use miner
to use the miner set the answers config to
    besuConsAlgo: 'miner',
    besuConsApi: 'MINER',
    enableMiner: true,
    minerCoinbase: 'fe3b557e8fb62b89f4916b721be55ceb828dbd73',

--- a/templates/besu/config/besu/config.toml
+++ b/templates/besu/config/besu/config.toml
@@ -58,3 +58,7 @@ Xdns-update-enabled=true
 {% endif %}
 
 min-gas-price={{- minGasPrice}}
+{% if enableMiner %}
+miner-enabled=true
+miner-coinbase="0x{{- minerCoinbase}}"
+{% endif %}
