render docker compose based on node config

--- a/templates/besu/docker-compose.yml
+++ b/templates/besu/docker-compose.yml
@@ -1,6 +1,8 @@
 ---
 version: '3.6'
 
+{% import "macros.jinja" as macros with context %}
+
 x-besu-bootnode-def:
   &besu-bootnode-def
   restart: "on-failure"
@@ -149,105 +151,7 @@ x-ethsignerProxy-def:
     - 8545
 
 services:
-
-  validator1:
-    << : *besu-bootnode-def
-    volumes:
-      - public-keys:/tmp/
-      - ./config/besu/config.toml:/config/config.toml
-      - ./config/besu/permissions_config.toml:/config/permissions_config.toml
-      - ./config/besu/static-nodes.json:/config/static-nodes.json
-      - ./config/besu/log-config.xml:/config/log-config.xml
-      - ./logs/besu:/var/log/
-      - ./config/besu/{{- besuConsAlgo}}Genesis.json:/config/genesis.json
-      - ./config/besu/networkFiles/validator1/keys:/opt/besu/keys
-{% if enableStaticNodes %}
-      - ./config/besu/static-nodes.json:/config/static-nodes.json
-{% endif %}
-    networks:
-      quorum-dev-quickstart:
-{% if not enableDNS %}
-        ipv4_address: 172.16.239.11
-{% endif %}
-
-  validator2:
-    << : *besu-def
-    volumes:
-      - public-keys:/opt/besu/public-keys/
-      - ./config/besu/config.toml:/config/config.toml
-      - ./config/besu/permissions_config.toml:/config/permissions_config.toml
-      - ./config/besu/static-nodes.json:/config/static-nodes.json
-      - ./config/besu/log-config.xml:/config/log-config.xml
-      - ./logs/besu:/var/log/
-      - ./config/besu/{{- besuConsAlgo}}Genesis.json:/config/genesis.json
-      - ./config/besu/networkFiles/validator2/keys:/opt/besu/keys
-    depends_on:
-      - validator1
-    networks:
-      quorum-dev-quickstart:
-{% if not enableDNS %}
-        ipv4_address: 172.16.239.12
-{% endif %}
-
-  validator3:
-    << : *besu-def
-    volumes:
-      - public-keys:/opt/besu/public-keys/
-      - ./config/besu/config.toml:/config/config.toml
-      - ./config/besu/permissions_config.toml:/config/permissions_config.toml
-      - ./config/besu/static-nodes.json:/config/static-nodes.json
-      - ./config/besu/log-config.xml:/config/log-config.xml
-      - ./logs/besu:/var/log/
-      - ./config/besu/{{- besuConsAlgo}}Genesis.json:/config/genesis.json
-      - ./config/besu/networkFiles/validator3/keys:/opt/besu/keys
-    depends_on:
-      - validator1
-    networks:
-      quorum-dev-quickstart:
-{% if not enableDNS %}
-        ipv4_address: 172.16.239.13
-{% endif %}
-
-  validator4:
-    << : *besu-def
-    volumes:
-      - public-keys:/opt/besu/public-keys/
-      - ./config/besu/config.toml:/config/config.toml
-      - ./config/besu/permissions_config.toml:/config/permissions_config.toml
-      - ./config/besu/static-nodes.json:/config/static-nodes.json
-      - ./config/besu/log-config.xml:/config/log-config.xml
-      - ./logs/besu:/var/log/
-      - ./config/besu/{{- besuConsAlgo}}Genesis.json:/config/genesis.json
-      - ./config/besu/networkFiles/validator4/keys:/opt/besu/keys
-    depends_on:
-      - validator1
-    networks:
-      quorum-dev-quickstart:
-{% if not enableDNS %}
-        ipv4_address: 172.16.239.14
-{% endif %}
-
-  rpcnode:
-    << : *besu-def
-    volumes:
-      - public-keys:/opt/besu/public-keys/
-      - ./config/besu/config.toml:/config/config.toml
-      - ./config/besu/permissions_config.toml:/config/permissions_config.toml
-      - ./config/besu/static-nodes.json:/config/static-nodes.json
-      - ./config/besu/log-config.xml:/config/log-config.xml
-      - ./logs/besu:/var/log/
-      - ./config/besu/{{- besuConsAlgo}}Genesis.json:/config/genesis.json
-      - ./config/besu/networkFiles/rpcnode/keys:/opt/besu/keys
-    depends_on:
-      - validator1
-    ports:
-      - 8545:8545/tcp
-      - 8546:8546/tcp
-    networks:
-      quorum-dev-quickstart:
-{% if not enableDNS %}
-        ipv4_address: 172.16.239.15
-{% endif %}
+{{ macros.services(nodeConfig) }}
 
   ethsignerProxy:
     << : *ethsignerProxy-def
@@ -266,181 +170,6 @@ services:
 {% endif %}
 
 
-{% if privacy %}
-  member1orion:
-    << : *orion-def
-    environment:
-      - ORION_OTHERNODES=http://member2orion:8080/,http://member3orion:8080/
-      - ORION_NODEURL=http://member1orion:8080
-      - ORION_CLIENTURL=http://member1orion:8888
-      - LOG4J_CONFIGURATION_FILE=/config/log-config.xml
-    volumes:
-      - ./config/orion/orion.conf:/config/orion.conf
-      - ./config/orion/networkFiles/orion1:/keys/
-      - ./logs/orion:/var/log/
-      - ./config/orion/log-config.xml:/config/log-config.xml
-    networks:
-      quorum-dev-quickstart:
-{% if not enableDNS %}
-        ipv4_address: 172.16.239.26
-{% endif %}
-
-  member1besu:
-    << : *besu-def
-    entrypoint:
-      - /bin/bash
-      - -c
-      - |
-        while [ ! -f "/opt/besu/public-keys/bootnode_pubkey" ]; do sleep 5; done ;
-        /opt/besu/bin/besu \
-        --config-file=/config/config.toml \
-        --p2p-host=$$(hostname -i) \
-        --genesis-file=/config/genesis.json \
-        --node-private-key-file=/opt/besu/keys/key \
-        --privacy-enabled \
-        --privacy-url=http://member1orion:8888 \
-        --privacy-public-key-file=/config/orion/orion.pub \
-        --privacy-onchain-groups-enabled={{- privacyOnchainGroupsEnabled}} \
-        --rpc-http-api=EEA,WEB3,ETH,NET,PRIV,PERM,{{- besuConsApi}} \
-        --rpc-ws-api=EEA,WEB3,ETH,NET,PRIV,PERM,{{- besuConsApi}} ;
-    volumes:
-      - public-keys:/opt/besu/public-keys/
-      - ./config/besu/config.toml:/config/config.toml
-      - ./config/besu/permissions_config.toml:/config/permissions_config.toml
-      - ./config/besu/static-nodes.json:/config/static-nodes.json
-      - ./config/besu/log-config.xml:/config/log-config.xml
-      - ./logs/besu:/var/log/
-      - ./config/besu/{{- besuConsAlgo}}Genesis.json:/config/genesis.json
-      - ./config/besu/networkFiles/member1/keys:/opt/besu/keys
-      - ./config/orion/networkFiles/orion1/nodeKey.pub:/config/orion/orion.pub
-    depends_on:
-      - validator1
-      - member1orion
-    ports:
-      - 20000:8545/tcp
-      - 20001:8546/tcp
-    networks:
-      quorum-dev-quickstart:
-{% if not enableDNS %}
-        ipv4_address: 172.16.239.16
-{% endif %}
-
-  member2orion:
-    << : *orion-def
-    environment:
-      - ORION_OTHERNODES=http://member1orion:8080/,http://member3orion:8080/
-      - ORION_NODEURL=http://member2orion:8080
-      - ORION_CLIENTURL=http://member2orion:8888
-      - LOG4J_CONFIGURATION_FILE=/config/log-config.xml
-    volumes:
-      - ./config/orion/orion.conf:/config/orion.conf
-      - ./config/orion/networkFiles/orion2:/keys/
-      - ./logs/orion:/var/log/
-      - ./config/orion/log-config.xml:/config/log-config.xml
-    networks:
-      quorum-dev-quickstart:
-{% if not enableDNS %}
-        ipv4_address: 172.16.239.27
-{% endif %}
-
-  member2besu:
-    << : *besu-def
-    entrypoint:
-      - /bin/bash
-      - -c
-      - |
-        while [ ! -f "/opt/besu/public-keys/bootnode_pubkey" ]; do sleep 5; done ;
-        /opt/besu/bin/besu \
-        --config-file=/config/config.toml \
-        --p2p-host=$$(hostname -i) \
-        --genesis-file=/config/genesis.json \
-        --node-private-key-file=/opt/besu/keys/key \
-        --privacy-enabled \
-        --privacy-url=http://member2orion:8888 \
-        --privacy-public-key-file=/config/orion/orion.pub \
-        --privacy-onchain-groups-enabled={{- privacyOnchainGroupsEnabled}} \
-        --rpc-http-api=EEA,WEB3,ETH,NET,PRIV,PERM,{{- besuConsApi}} \
-        --rpc-ws-api=EEA,WEB3,ETH,NET,PRIV,PERM,{{- besuConsApi}} ;
-    volumes:
-      - public-keys:/opt/besu/public-keys/
-      - ./config/besu/config.toml:/config/config.toml
-      - ./config/besu/permissions_config.toml:/config/permissions_config.toml
-      - ./config/besu/static-nodes.json:/config/static-nodes.json
-      - ./config/besu/log-config.xml:/config/log-config.xml
-      - ./logs/besu:/var/log/
-      - ./config/besu/{{- besuConsAlgo}}Genesis.json:/config/genesis.json
-      - ./config/besu/networkFiles/member2/keys:/opt/besu/keys
-      - ./config/orion/networkFiles/orion2/nodeKey.pub:/config/orion/orion.pub
-    depends_on:
-      - validator1
-      - member2orion
-    ports:
-      - 20002:8545/tcp
-      - 20003:8546/tcp
-    networks:
-      quorum-dev-quickstart:
-{% if not enableDNS %}
-        ipv4_address: 172.16.239.17
-{% endif %}
-
-  member3orion:
-    << : *orion-def
-    environment:
-      - ORION_OTHERNODES=http://member1orion:8080/,http://member2orion:8080/
-      - ORION_NODEURL=http://member3orion:8080
-      - ORION_CLIENTURL=http://member3orion:8888
-      - LOG4J_CONFIGURATION_FILE=/config/log-config.xml
-    volumes:
-      - ./config/orion/orion.conf:/config/orion.conf
-      - ./config/orion/networkFiles/orion3:/keys/
-      - ./logs/orion:/var/log/
-      - ./config/orion/log-config.xml:/config/log-config.xml
-    networks:
-      quorum-dev-quickstart:
-{% if not enableDNS %}
-        ipv4_address: 172.16.239.28
-{% endif %}
-
-  member3besu:
-    << : *besu-def
-    entrypoint:
-      - /bin/bash
-      - -c
-      - |
-        while [ ! -f "/opt/besu/public-keys/bootnode_pubkey" ]; do sleep 5; done ;
-        /opt/besu/bin/besu \
-        --config-file=/config/config.toml \
-        --p2p-host=$$(hostname -i) \
-        --genesis-file=/config/genesis.json \
-        --node-private-key-file=/opt/besu/keys/key \
-        --privacy-enabled \
-        --privacy-url=http://member3orion:8888 \
-        --privacy-public-key-file=/config/orion/orion.pub \
-        --privacy-onchain-groups-enabled={{- privacyOnchainGroupsEnabled}} \
-        --rpc-http-api=EEA,WEB3,ETH,NET,PRIV,PERM,{{- besuConsApi}} \
-        --rpc-ws-api=EEA,WEB3,ETH,NET,PRIV,PERM,{{- besuConsApi}} ;
-    volumes:
-      - public-keys:/opt/besu/public-keys/
-      - ./config/besu/config.toml:/config/config.toml
-      - ./config/besu/permissions_config.toml:/config/permissions_config.toml
-      - ./config/besu/static-nodes.json:/config/static-nodes.json
-      - ./config/besu/log-config.xml:/config/log-config.xml
-      - ./logs/besu:/var/log/
-      - ./config/besu/{{- besuConsAlgo}}Genesis.json:/config/genesis.json
-      - ./config/besu/networkFiles/member3/keys:/opt/besu/keys
-      - ./config/orion/networkFiles/orion3/nodeKey.pub:/config/orion/orion.pub
-    depends_on:
-      - validator1
-      - member3orion
-    ports:
-      - 20004:8545/tcp
-      - 20005:8546/tcp
-    networks:
-      quorum-dev-quickstart:
-{% if not enableDNS %}
-        ipv4_address: 172.16.239.18
-{% endif %}
-{% endif %}
 
 {% if not orchestrate %}
   explorer:
