--- a/templates/besu/docker-compose.yml
+++ b/templates/besu/docker-compose.yml
@@ -3,54 +3,6 @@ version: '3.6'
 
 {% import "macros.jinja" as macros with context %}
 
-x-besu-bootnode-def:
-  &besu-bootnode-def
-  restart: "on-failure"
-  image: hyperledger/besu:${BESU_VERSION:-latest}
-  environment:
-    - LOG4J_CONFIGURATION_FILE=/config/log-config.xml
-  entrypoint:
-    - /bin/bash
-    - -c
-    - |
-      /opt/besu/bin/besu public-key export --to=/tmp/bootnode_pubkey;
-      /opt/besu/bin/besu \
-      --config-file=/config/config.toml \
-      --p2p-host=$$(hostname -i) \
-      --genesis-file=/config/genesis.json \
-      --node-private-key-file=/opt/besu/keys/key \
-      --rpc-http-api=EEA,WEB3,ETH,NET,{% if privacy %}PRIV,{% endif %}PERM,{{- besuConsApi}} \
-      --rpc-ws-api=EEA,WEB3,ETH,NET,{% if privacy %}PRIV,{% endif %}PERM,{{- besuConsApi}} ;
-
-x-besu-def:
-  &besu-def
-  restart: "on-failure"
-  image: hyperledger/besu:${BESU_VERSION:-latest}
-  environment:
-    - LOG4J_CONFIGURATION_FILE=/config/log-config.xml
-  entrypoint:
-    - /bin/bash
-    - -c
-    - |
-{% if not enableStaticNodes %}
-      while [ ! -f "/opt/besu/public-keys/bootnode_pubkey" ]; do sleep 5; done ;
-{% endif %}
-      /opt/besu/bin/besu \
-      --config-file=/config/config.toml \
-      --p2p-host=$$(hostname -i) \
-      --genesis-file=/config/genesis.json \
-      --node-private-key-file=/opt/besu/keys/key \
-      --rpc-http-api=EEA,WEB3,ETH,NET,{% if privacy %}PRIV,{% endif %}PERM,{{- besuConsApi}} \
-      --rpc-ws-api=EEA,WEB3,ETH,NET,{% if privacy %}PRIV,{% endif %}PERM,{{- besuConsApi}} ;
-
-{% if privacy %}
-x-orion-def:
-  &orion-def
-  image: consensys/quorum-orion:${QUORUM_ORION_VERSION:-latest}
-  command: ["/config/orion.conf"]
-{% endif %}
-
-
 {% if elk %}
 x-redis-def:
   &redis-def
@@ -134,7 +86,9 @@ x-metricbeat-def:
 
 {% endif %}
 
+{% set anyRPCNode = nodeConfig | firstByAttr('type', 'rpc') %}
 
+{% if enableETHSignerProxy and anyRPCNode %}
 x-ethsignerProxy-def:
   &ethsignerProxy-def
   image: consensys/quorum-ethsigner:${QUORUM_ETHSIGNER_VERSION:-latest}
@@ -151,11 +105,12 @@ x-ethsignerProxy-def:
   ]
   ports:
     - 8545
+{% endif %}
 
 services:
 {{ macros.services(nodeConfig) }}
 
-{% if enableETHSignerProxy %}
+{% if enableETHSignerProxy and anyRPCNode %}
   ethsignerProxy:
     << : *ethsignerProxy-def
     volumes:
@@ -173,7 +128,6 @@ services:
 {% endif %}
 {% endif %}
 
-{% set anyRPCNode = nodeConfig | firstByAttr('type', 'rpc') %}
 {% if not orchestrate and anyRPCNode %}
   explorer:
     build: block-explorer-light/.
