--- a/templates/besu/config/haproxy/orion-dns-proxy.cfg
+++ b/templates/besu/config/haproxy/orion-dns-proxy.cfg
@@ -16,4 +16,4 @@ frontend stats
   stats admin if TRUE
 
 {% import "macros.jinja" as macros with context %}
-{{ macros.haproxyOrion(nodeConfig) }}
+{{ macros.haproxyPrivacyNode(nodeConfig) }}
