--- a/templates/besu/config/besu/permissions_config.toml
+++ b/templates/besu/config/besu/permissions_config.toml
@@ -1,5 +1,5 @@
 nodes-whitelist=[
-{%- for node in nodeConfig | byNotAttr('type', 'privacynode') -%}
+{%- for node in nodeConfig | byNotAttr('type', 'orion') | byNotAttr('type', 'tessera')  -%}
 {%- if enableDNS -%}
 "enode://{{- node.publicKey}}@{{- node.name}}:30303"{{- "," if not loop.last}}
 {%- else -%}
