master merge updates

--- a/templates/orchestrate/.env
+++ b/templates/orchestrate/.env
@@ -37,7 +37,7 @@ TO_ACCOUNT=[DEPLOYED_CONTRACT]
 
 ## Before running command `npm run send-eea-private-tx`
 ## set from Besu Orion node
-{% if clientType == "gquorum" %}
+{% if clientType == "goquorum" %}
 TESSERA1_MEMBER_KEY=A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo=
 TESSERA2_MEMBER_KEY=Ko2bVqD+nNlNYL5EE7y3IdOnviftjiizpjRt+HTuFBs=
 TESSERA3_MEMBER_KEY=k2zXEin4Ip/qBGlRkJejnGWdP9cjkK+DAvKNW31L2C8=
